--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,8 @@ atom_feed:
   path                   : # blank (default) uses feed.xml
 
 # Theme
-minimal_mistakes_skin: "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
+theme                    : minimal-mistakes-jekyll
+minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
 
 # SEO Related
 google_site_verification :
